--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
       <div class="container">
         <h1 class="logo"><a href="#">HBT</a></h1>
         <ul>
-          <li><a href="index.html" class="current">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#" class="current">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -23,9 +23,9 @@
       <div class="container">
         <div class="info-left">
           <h1><span class="text-primary">About</span> Our Hotel</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem assumenda quos incidunt laudantium
-            impedit cupiditate ipsum? Expedita, possimus libero! Minima sint dolor assumenda voluptas perferendis
-            tenetur id rem? Consequuntur, earum.</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, libero repellendus accusamus quidem,
+            deserunt, quis fugiat laborum dolores nihil quos reiciendis repellat vel excepturi officia et porro tempore
+            eos iure.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate hic ipsum assumenda. In ipsum eum et
             consectetur iusto cumque hic!</p>
         </div>
@@ -36,8 +36,36 @@
     </section>
 
 
-
     <div class="clr"></div>
+
+    <section id="testimonials">
+      <div class="container">
+        <h2>What Our Guests Say </h2>
+
+
+        <div class="testimonial bg-primary">
+          <img src="img/person-1.jpg" alt="Zumrad">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, earum. Sunt odio libero quam aliquam,
+            quisquam atque velit vero, laborum obcaecati perferendis animi eius quaerat cupiditate, error aperiam
+            maiores fugit deleniti molestias cumque commodi accusamus dicta consectetur! Velit, impedit odio! Lorem
+            ipsum, dolor sit amet consectetur adipisicing elit. Adipisci repellendus amet sunt recusandae asperiores
+            quas quisquam neque harum vel itaque!</p>
+        </div>
+
+        <div class="testimonial bg-primary">
+          <img src="img/person-2.jpg" alt="Qimmat">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, earum. Sunt odio libero quam aliquam,
+            quisquam atque velit vero, laborum obcaecati perferendis animi eius quaerat cupiditate, error aperiam
+            maiores fugit deleniti molestias cumque commodi accusamus dicta consectetur! Velit, impedit odio! Lorem
+            ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus eos repudiandae saepe veniam, tempora
+            maiores id nemo doloremque excepturi alias!</p>
+        </div>
+      </div>
+    </section>
+
+
+
+
     <footer id="main-footer">
       <p>Hotel BT &copy; 2019, All rights Reserved</p>
     </footer>
