--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-  <title>Hotel Website</title>
+  <title>HBT - Hotel Website</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -20,6 +22,63 @@
     </nav>
   </header>
 
+  <section id="contact-form">
+    <div class="container">
+      <h1><span class="text-primary">Contact</span> Us</h1>
+      <p>Please fill out the form below to contact us</p>
+
+      <form action="">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <br>
+          <input type="text" id="name" name="name" />
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <br>
+          <input type="email" id="email" name="email" />
+        </div>
+
+        <div class="form-group">
+          <label for="message">Message</label>
+          <br>
+          <textarea type="text" id="message" name="message"></textarea>
+        </div>
+        <button class="btn">Submit</button>
+      </form>
+    </div>
+  </section>
+
+  <section id="contact-info" class="bg-dark">
+    <div class="container">
+      <div class="box">
+        <i class="fas fa-hotel fa-3x"></i>
+        <h3>Locations</h3>
+        <p>
+          123 Main st, New York, NY
+        </p>
+      </div>
+
+      <div class="box">
+        <i class="fas fa-phone fa-3x"></i>
+        <h3>Phone Number</h3>
+        <p>
+          (347) 779 7709
+        </p>
+      </div>
+
+      <div class="box">
+        <i class="fas fa-hotel fa-3x"></i>
+        <h3>Email</h3>
+        <p>
+          info@hbdhotel.com
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <div class="clr"></div>
 
   <footer id="main-footer">
     <p>Hotel BT &copy; 2019, All rights Reserved</p>
